# epub-translate

./: .dockerignore  .env.example  .env.local.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.gemini.yml  docker-compose.image.yml  docker-compose.local.yml  docker-compose.yml  glossary.example.yaml  pyproject.toml
.github/workflows/: docker-publish.yml
alembic/: env.py
alembic/versions/: 20260422_0001_initial.py  20260422_0002_translation_cache_hash.py  20260424_0003_translation_provider.py  20260425_0004_credits_billing.py
app/: main.py
app/api/: deps.py  routes.py
app/core/: config.py  csrf.py  security.py  session.py  templates.py
app/db/: session.py
app/models/: __init__.py  app_setting.py  credit_transaction.py  job.py  translation_cache.py  user.py
app/services/: app_settings.py  auth.py  bootstrap.py  cache.py  checkpoints.py  credits.py  epub.py  error_messages.py  filenames.py  glossary.py  jobs.py  paddle.py  storage.py  text.py  translation_job.py  translation_options.py  translation_pipeline.py
app/tasks/: celery_app.py  celery_worker.py  worker.py
app/templates/: base.html  index.html  pricing.html  self_hosting.html
app/tests/: conftest.py  helpers.py  test_auth.py  test_billing.py  test_cache_and_glossary.py  test_checkpoints.py  test_epub_pipeline.py  test_gemini_translator.py  test_job_flow.py  test_job_rules.py  test_progress.py  test_translation_job.py  test_translator_fallback.py  test_worker.py
docker/: app-entrypoint.sh
epub_translate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+17 files in other folders)
